[gd_scene load_steps=18 format=2]

[ext_resource path="res://Scenes/Menu.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scripts/Game.gd" type="Script" id=2]
[ext_resource path="res://Scenes/SceneTransition.tscn" type="PackedScene" id=3]
[ext_resource path="res://Graphics/Buttons/KeyE.png" type="Texture" id=4]
[ext_resource path="res://Scenes/HealthUI.tscn" type="PackedScene" id=5]
[ext_resource path="res://Text/Arimo-Regular.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://Scripts/ShortDia.gd" type="Script" id=7]

[sub_resource type="Animation" id=1]
resource_name = "MenuFade"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Menu:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Menu:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Shader" id=3]
code = "shader_type canvas_item;

uniform float amount: hint_range(0.0, 5.0);

void fragment() {
	COLOR.rgb = textureLod(SCREEN_TEXTURE, SCREEN_UV, amount).rgb;
}
"

[sub_resource type="ShaderMaterial" id=4]
shader = SubResource( 3 )
shader_param/amount = 0.0

[sub_resource type="StyleBoxFlat" id=5]
content_margin_left = 10.0
content_margin_right = 10.0
bg_color = Color( 0.270588, 0.270588, 0.270588, 1 )
border_width_left = 1
border_width_top = 1
border_color = Color( 0.372549, 0.372549, 0.372549, 1 )
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2
shadow_size = 2
shadow_offset = Vector2( 2, 2 )

[sub_resource type="Animation" id=6]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "TalkAnim"
length = 0.2
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="DynamicFont" id=8]
use_mipmaps = true
use_filter = true
font_data = ExtResource( 6 )

[sub_resource type="Animation" id=9]
resource_name = "Fade"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Environment" id=10]
background_mode = 4
dof_blur_near_distance = 8.53
dof_blur_near_transition = 0.01
glow_enabled = true
glow_levels/1 = true
glow_levels/2 = true
glow_levels/5 = false
glow_intensity = 0.47
glow_strength = 0.94
glow_blend_mode = 0
glow_hdr_threshold = 1.59
glow_hdr_luminance_cap = 5.94
glow_bicubic_upscale = true

[node name="Game" type="Node2D"]
script = ExtResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/MenuFade = SubResource( 1 )
anims/RESET = SubResource( 2 )

[node name="Menu" parent="." instance=ExtResource( 1 )]

[node name="Blur" type="CanvasLayer" parent="."]

[node name="BlackRect" parent="Blur" instance=ExtResource( 3 )]
color = Color( 0, 0, 0, 0 )

[node name="ColorRect" type="ColorRect" parent="Blur"]
material = SubResource( 4 )
margin_right = 768.0
margin_bottom = 480.0
mouse_filter = 2

[node name="Dialogue" type="CanvasLayer" parent="."]
layer = 2

[node name="Talk" type="PanelContainer" parent="Dialogue"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 344.0
margin_top = 348.0
margin_right = 424.0
margin_bottom = 376.0
grow_horizontal = 2
custom_styles/panel = SubResource( 5 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Dialogue/Talk"]
anims/RESET = SubResource( 6 )
anims/TalkAnim = SubResource( 7 )

[node name="HBox" type="HBoxContainer" parent="Dialogue/Talk"]
margin_left = 10.0
margin_top = 1.0
margin_right = 82.0
margin_bottom = 28.0
grow_horizontal = 2
custom_constants/separation = 10
alignment = 1

[node name="TextureRect" type="TextureRect" parent="Dialogue/Talk/HBox"]
margin_right = 15.0
margin_bottom = 27.0
rect_min_size = Vector2( 15, 0 )
texture = ExtResource( 4 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Dialogue/Talk/HBox"]
margin_left = 25.0
margin_top = 6.0
margin_right = 72.0
margin_bottom = 20.0
text = "PARLER"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ShortDia" type="Label" parent="Dialogue"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 288.0
margin_top = 376.0
margin_right = 480.0
margin_bottom = 400.0
custom_fonts/font = SubResource( 8 )
custom_styles/normal = SubResource( 5 )
text = "abcdw"
align = 1
valign = 1
script = ExtResource( 7 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Dialogue/ShortDia"]
anims/Fade = SubResource( 9 )

[node name="SFXTimer" type="Timer" parent="Dialogue/ShortDia"]
wait_time = 0.1

[node name="SFX" type="AudioStreamPlayer2D" parent="Dialogue/ShortDia"]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
autoplay = true

[node name="SFX" type="AudioStreamPlayer" parent="."]
autoplay = true

[node name="MusicTween" type="Tween" parent="."]

[node name="GameUI" type="CanvasLayer" parent="."]
layer = 2

[node name="HealthUI" parent="GameUI" instance=ExtResource( 5 )]
margin_left = 3.0
margin_right = 386.0
margin_bottom = 242.0
rect_scale = Vector2( 2, 2 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 10 )

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="fade_menu" from="Menu" to="." method="_on_Menu_fade_menu"]
